improvements to price calc, automated checks, jupyter notebook

--- a/SupermarketNotes.ipynb
+++ b/SupermarketNotes.ipynb
@@ -53,29 +53,65 @@
    "source": [
     "## To Do\n",
     "\n",
-    "- Add items to basket\n",
-    "- Pricing for Fruit Tea\n",
-    "- Pricing for Strawberries\n",
-    "- Pricing for Coffee\n",
-    "- Some way of displaying the price as necessary for the demo\n",
-    "- Some automated checks\n",
-    "  - done for pricing functions\n",
-    "- Updating this document\n",
-    "\n",
+    "- Add items to basket    \n",
+    "Done\n",
+    "- Pricing for Fruit Tea  \n",
+    "Done\n",
+    "- Pricing for Strawberries  \n",
+    "Done\n",
+    "- Pricing for Coffee   \n",
+    "Done  \n",
+    "- Some way of displaying the price as necessary for the demo   \n",
+    "Done\n",
+    "- Some automated checks    \n",
+    "Done but could be expanded\n",
+    "- Updating this document   \n",
+    "Done but could add more\n",
     "#### Extra\n",
     "Could run tests using Github action"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0c38f397-f214-4c21-bc0b-2dec46d6195c",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Pricing Functions from pricing.py\n",
+    "Three functions: `simple, bogof, special_sr1`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7e20e59b-94e5-4cc8-b5df-db06757dabc5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import pricing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "547d0808-bee0-4ac9-9de5-666bf1fc6fbd",
+   "metadata": {},
+   "source": [
+    "### Simple"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "552363dc-30d0-4a9d-9230-c089196fd9af",
+   "id": "d80b5cf2-ed7b-4d8b-995f-8013137755d1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13.5"
+       "2"
       ]
      },
      "execution_count": 3,
@@ -84,13 +120,273 @@
     }
    ],
    "source": [
-    "4.50*3"
+    "pricing.simple(1, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "aec63d10-5f19-4889-adc0-e6a3be7f4c38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pricing.simple(10, 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71851e7f-0d00-4c22-8c43-a8c93719890c",
+   "metadata": {},
+   "source": [
+    "### BOGOF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "afa74643-52cd-4dfe-9436-357169a2de74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0  0\n",
+      "1  2\n",
+      "2  2.0\n",
+      "3  4.0\n",
+      "4  4.0\n",
+      "5  6.0\n",
+      "6  6.0\n",
+      "7  8.0\n",
+      "8  8.0\n",
+      "9  10.0\n",
+      "10  10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for quantity in range(11):\n",
+    "    price = pricing.bogof(quantity, 2)\n",
+    "    print(f\"{quantity}  {price}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d25d34d-01f2-404a-a873-d8aa3a413d99",
+   "metadata": {},
+   "source": [
+    "### Strawberry Special Offer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "21c81ddb-5a26-4394-b158-def6aeb86d7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0  0.0\n",
+      "1  5.0\n",
+      "2  10.0\n",
+      "3  13.5\n",
+      "4  18.0\n",
+      "5  22.5\n",
+      "6  27.0\n",
+      "7  31.5\n",
+      "8  36.0\n",
+      "9  40.5\n",
+      "10  45.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for quantity in range(11):\n",
+    "    price = pricing.special_sr1(quantity, 5.00)\n",
+    "    print(f\"{quantity}  {price}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcd5a0b2-3758-418f-a8a7-d89badb3bb35",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## The Checkout\n",
+    "Item code reminder\n",
+    "```\n",
+    "products = {\"FR1\": \"Fruit tea\",\n",
+    "            \"SR1\": \"Strawberries\",\n",
+    "            \"CF1\": \"Coffee\"}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "bebfb6ac-aa00-4ee9-bad6-00d85db6f4f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import supermarket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "0c161d7a-9596-4eee-91f6-97f026ea57df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "checkout = supermarket.Checkout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05447a7e-9e8a-4b02-a3be-2d59ab5923b6",
+   "metadata": {},
+   "source": [
+    "### Adding items to basket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "75794bd7-f8ba-4aa9-ab01-aae7fc9a3de1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'FR1': 1, 'SR1': 0, 'CF1': 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "checkout.add_item(\"FR1\")\n",
+    "print(checkout.items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a380ac05-17de-44b1-b482-7da0b3a9dcc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'FR1': 1, 'SR1': 5, 'CF1': 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "checkout.add_item(\"SR1\", 5)\n",
+    "print(checkout.items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "f62b5b39-7c18-4b54-9aa1-775f1a4939fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'FR1': 1, 'SR1': 5, 'CF1': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "checkout.add_item(\"CF1\", 2)\n",
+    "print(checkout.items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "4479dff7-d93f-4341-90a6-1b181b57c7db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'FR1': 3, 'SR1': 5, 'CF1': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "checkout.add_item(\"FR1\", 2)\n",
+    "print(checkout.items)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10a9bddd-844f-4f33-b6f7-13669b40fb16",
+   "metadata": {},
+   "source": [
+    "### Calculate Fee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "59ff000c-04d2-4e4d-9f04-909d2af2431b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total: 51.18\n",
+      "Fruit tea: 6.22\n",
+      "Strawberries: 22.50\n",
+      "Coffee: 22.46\n"
+     ]
+    }
+   ],
+   "source": [
+    "checkout.show_prices()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5165709-4f50-44b6-b98f-c03e048c146c",
+   "metadata": {},
+   "source": [
+    "## Improvements\n",
+    "\n",
+    "- Have generic way of calculating by `n`, get `x` free\n",
+    "- Have generic way of having price deductions when number of items crosses thresholds\n",
+    "- Discounts that take different items into consideration, e.g. buy 2 coffees, get a free strawberry\n",
+    "- Not good for realistic number of items\n",
+    "- Need clearer requirements"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0de6e410-16b0-41db-9119-cadb879e5109",
+   "id": "8202258e-623b-478b-8cc6-4fa10bcbccd8",
    "metadata": {},
    "outputs": [],
    "source": []
