--- a/SupermarketNotes.ipynb
+++ b/SupermarketNotes.ipynb
@@ -48,27 +48,55 @@
   },
   {
    "cell_type": "markdown",
+   "id": "49b1f55b-44e5-4d78-a244-035412f8cc53",
+   "metadata": {},
+   "source": [
+    "## General Thoughs\n",
+    "\n",
+    "- Try to keep things simple as\n",
+    "    - only meant to be a quick exercise\n",
+    "    - we don't have full details, avoild something elaborate based on incorrect assumptions\n",
+    "\n",
+    "- Pricing may be subject to change,keep separate so it can be changed independetly of everything else. Also keep simple for same reasons as above"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "464f46b3-d53b-4eab-812d-0efcfe9c4315",
    "metadata": {},
    "source": [
     "## To Do\n",
     "\n",
     "- Add items to basket    \n",
-    "Done\n",
+    "**Done**\n",
     "- Pricing for Fruit Tea  \n",
-    "Done\n",
+    "**Done**\n",
     "- Pricing for Strawberries  \n",
-    "Done\n",
+    "**Done**\n",
     "- Pricing for Coffee   \n",
-    "Done  \n",
-    "- Some way of displaying the price as necessary for the demo   \n",
-    "Done\n",
+    "**Done** \n",
+    "- Some way of displaying the price, as necessary for the demo   \n",
+    "**Done**\n",
     "- Some automated checks    \n",
-    "Done but could be expanded\n",
+    "**Done** but could be expanded\n",
     "- Updating this document   \n",
-    "Done but could add more\n",
+    "**Done** but could add more\n",
     "#### Extra\n",
-    "Could run tests using Github action"
+    "Could run tests using Github action    \n",
+    "**Not done**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8edfaf9c-e52c-4d4e-b26e-7300ade290f1",
+   "metadata": {},
+   "source": [
+    "## What's been created on the basis of the above?\n",
+    "- **supermarket.py** - the actual shopping basket\n",
+    "- **pricing.py** - contains three pricing functions uses by the shopping basket\n",
+    "- **checkout_checks.txt** - doctest tests for supermarket checkout\n",
+    "- **pricing_checks.txt** - doctest tests for pricing functions\n",
+    "- **SupermarketNotes.ipynb** - this very notebook"
    ]
   },
   {
@@ -78,7 +106,8 @@
     "tags": []
    },
    "source": [
-    "## Pricing Functions from pricing.py\n",
+    "## Example of working\n",
+    "### Pricing Functions from pricing.py\n",
     "Three functions: `simple, bogof, special_sr1`"
    ]
   },
@@ -99,7 +128,7 @@
    "id": "547d0808-bee0-4ac9-9de5-666bf1fc6fbd",
    "metadata": {},
    "source": [
-    "### Simple"
+    "#### Simple"
    ]
   },
   {
@@ -149,7 +178,7 @@
    "id": "71851e7f-0d00-4c22-8c43-a8c93719890c",
    "metadata": {},
    "source": [
-    "### BOGOF"
+    "#### BOGOF"
    ]
   },
   {
@@ -187,7 +216,7 @@
    "id": "6d25d34d-01f2-404a-a873-d8aa3a413d99",
    "metadata": {},
    "source": [
-    "### Strawberry Special Offer"
+    "#### Strawberry Special Offer"
    ]
   },
   {
@@ -227,7 +256,7 @@
     "tags": []
    },
    "source": [
-    "## The Checkout\n",
+    "### The Checkout\n",
     "Item code reminder\n",
     "```\n",
     "products = {\"FR1\": \"Fruit tea\",\n",
@@ -261,7 +290,7 @@
    "id": "05447a7e-9e8a-4b02-a3be-2d59ab5923b6",
    "metadata": {},
    "source": [
-    "### Adding items to basket"
+    "#### Adding items to basket"
    ]
   },
   {
@@ -345,7 +374,7 @@
    "id": "10a9bddd-844f-4f33-b6f7-13669b40fb16",
    "metadata": {},
    "source": [
-    "### Calculate Fee"
+    "#### Calculate Fee"
    ]
   },
   {
@@ -374,13 +403,20 @@
    "id": "f5165709-4f50-44b6-b98f-c03e048c146c",
    "metadata": {},
    "source": [
-    "## Improvements\n",
+    "## Improvements/thoughts\n",
     "\n",
-    "- Have generic way of calculating by `n`, get `x` free\n",
+    "- Have generic way of calculating buy `n`, get `x` free\n",
     "- Have generic way of having price deductions when number of items crosses thresholds\n",
     "- Discounts that take different items into consideration, e.g. buy 2 coffees, get a free strawberry\n",
     "- Not good for realistic number of items\n",
-    "- Need clearer requirements"
+    "- Need clearer requirements\n",
+    "\n",
+    "----\n",
+    "\n",
+    "- Currently basket has counts for all 3 items. Fine with just 3 but with actual supermarket product range likely better to only include the actual items being purchased.\n",
+    "- Product types data currently just in small dictionaries in file. Could be in separate file. Could have database with details. Also on different track, could use newer Python features such as named tuples and data classes.\n",
+    "- Could move (a) get_prices method calculating the basket total and (b) show_prices displaying the totals out of the Checkout class (and also rename Checkout to Basket as a more meaningful name)\n",
+    "- Could have some sort of class and inheritance setup instead of the pricing functions but the simpler function structure serves for now. "
    ]
   },
   {
